Fix a bunch of Sonar issues